[gd_scene load_steps=2 format=2]

[ext_resource path="res://Test-Master.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
visible = false
margin_left = 477.014
margin_top = 17.4614
margin_right = 615.014
margin_bottom = 157.461
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 138.0
margin_bottom = 20.0
toggle_mode = true
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 24.0
margin_right = 138.0
margin_bottom = 44.0
toggle_mode = true
pressed = true
text = "Resolution"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 48.0
margin_right = 138.0
margin_bottom = 68.0
text = "Heal Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 72.0
margin_right = 138.0
margin_bottom = 92.0
text = "Damage Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 96.0
margin_right = 138.0
margin_bottom = 116.0
text = "Damage Player- Crit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 120.0
margin_right = 138.0
margin_bottom = 140.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
